--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -29,52 +29,53 @@
         display: none;
         position: fixed;
         top: 5px;
-        right: 5px;
-        background: $accent;
-        color: $primary;
+        right: 12px;
+        background: $primary;
+        color: $accent;
         font-size: 30px;
         justify-content: center;
         align-items: center;
         border-radius: 50%;
         width: 50px;
         height: 50px;
+        z-index: 999;
+        // transform: rotate(90deg);
+        opacity: 1;
+        border: 1px solid $white;
     }
 
-    // @include iphone-8 {
-    //     position: fixed;
+    @include iphone-8 {
+        position: fixed;
         
-    //     &__nav {
-    //         position: fixed;
-    //         background: $primary;
-    //         top: 0;
-    //         width: 50vw;
-    //         height: 100vh;
-    //         right: -50vw;
-    //         font-size: 18px;
-    //         transition: cubic-bezier(0.215, 0.610, 0.355, 1) .3s;
-    //         &--active {
-    //             right: 0;
-    //         }
-    //     }
+        position: fixed;
+        background: $primary;
+        top: 0;
+        width: 50vw;
+        height: 100vh;
+        right: -50vw;
+        font-size: 18px;
+        transition: cubic-bezier(0.215, 0.610, 0.355, 1) .3s;
+        &--active {
+            right: 0;
+        }
+        // &__nav {
+        // }
         
-    //     &__list {
-    //         flex-direction: column;
-    //         align-items: center;
-    //         justify-content: center;
-    //         height: 100%;
-    //     }
+        &__list {
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+        }
         
-    //     &__item {
-    //         margin: 20px 0;
-    //         text-align: center;
-    //     }
+        &__item {
+            margin: 20px 0;
+            text-align: center;
+        }
 
-    //     &__burger {
-    //         display: flex;
-    //     }
-
-    //     button {
-    //         display: none;
-    //     }
-    // }
+        &__burger {
+            display: flex;
+        }
+       
+    }
 }
