--- a/scss/style.css
+++ b/scss/style.css
@@ -276,9 +276,9 @@ textarea {
   display: none;
   position: fixed;
   top: 5px;
-  right: 5px;
-  background: #14B14B;
-  color: #111D35;
+  right: 12px;
+  background: #111D35;
+  color: #14B14B;
   font-size: 30px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -289,6 +289,49 @@ textarea {
   border-radius: 50%;
   width: 50px;
   height: 50px;
+  z-index: 999;
+  opacity: 1;
+  border: 1px solid #fff;
+}
+
+@media screen and (max-width: 540px) {
+  .c-header {
+    position: fixed;
+    position: fixed;
+    background: #111D35;
+    top: 0;
+    width: 50vw;
+    height: 100vh;
+    right: -50vw;
+    font-size: 18px;
+    -webkit-transition: cubic-bezier(0.215, 0.61, 0.355, 1) 0.3s;
+    transition: cubic-bezier(0.215, 0.61, 0.355, 1) 0.3s;
+  }
+  .c-header--active {
+    right: 0;
+  }
+  .c-header__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    height: 100%;
+  }
+  .c-header__item {
+    margin: 20px 0;
+    text-align: center;
+  }
+  .c-header__burger {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 .c-hero {
@@ -557,6 +600,7 @@ textarea {
   width: 80%;
   height: 80%;
   position: relative;
+  z-index: 1;
 }
 
 .c-gallery__image {
@@ -570,6 +614,7 @@ textarea {
 
 .c-gallery__button {
   position: absolute;
+  z-index: 1;
   top: 45%;
   height: 50px;
   width: 50px;
